--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5a16df9
-	base = 93dafaa
+	base = bac2def
 	trim = map_msgs
-	trimbase = 
+	trimbase = 93dafaa
